--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,7 +8,8 @@ services:
     env_file:
       - .env
     restart: unless-stopped
-
+    networks:
+      - apps
     # Give the container access to host resources via bind mounts
     volumes:
       - ${HOST_POOL_PATH}:${HOST_POOL_PATH}:ro
@@ -25,3 +26,6 @@ services:
         limits:
           cpus: "1.0"
           memory: 512M
+networks:
+  apps:
+    external: true
